fixtures/invalid/bad-docs-blocks.mu
@image src="../secret.svg" alt="Secret"

@list kind="bullets"
- Bad list kind.

@page output="../index.html"
